[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "venv"
venv = "."
verboseOutput = false
reportConstantRedefinition = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportUnusedExpression = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[metadata]
description = "..."
keyword = ["hledger","PTA", "investments", "accounting", "fifo"]
classifiers = [""]
author = "Eduardo"
author_email = "edkedk99@hotmail.com"

[project]
# TODO: Change name
name = "hledger_fifo"
version = "0.1.0"
readme= "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
dependencies = [
	     "click",
	     "rich_click",
	     "tabulate",
	     "pyxirr"
]

[project.urls]
homepage = "https://github.com/edkedk99/hledger-lots"
documentation = "https://edkedk99.github.io/hledger-lots/"
repository = "https://github.com/edkedk99/hledger-lots"
# changelog = ""

[project.scripts]
hledger-fifo = "hledger_fifo.__main__:main"  # TODO: Change name
