[tool.isort]
profile = "black"

[tool.pyright]
venvPath = "venv"
venv = "."
verboseOutput = false
reportConstantRedefinition = "warning"
reportUnnecessaryComparison = "warning"
reportAssertAlwaysTrue = "warning"
reportUnusedExpression = false

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages]
find = {}  # Scan the project directory with the default parameters

[metadata]
description = "Automatic lots using FIFO or AVERAGE COST for transactions using commodities in hledger"
keyword = ["hledger","PTA", "investments", "accounting", "lots"]
classifiers = [""]
author = "Eduardo"
author_email = "edkedk99@hotmail.com"

[project]
name = "hledger_lots"
version = "0.3.0"
readme= "docs/README.md"
requires-python = ">=3.8"
license = {text = "MIT License"}
dependencies = [
	     "click",
	     "rich_click",
	     "tabulate",
	     "pyxirr",
	     "yfinance",
	     "requests",
	     "requests-cache",
	     "questionary"
]

[project.urls]
homepage = "https://github.com/edkedk99/hledger-lots"
documentation = "https://edkedk99.github.io/hledger-lots/"
repository = "https://github.com/edkedk99/hledger-lots"
# changelog = ""

[project.scripts]
hledger-lots = "hledger_lots.__main__:main"
