[metadata]
name = hledger-fifo
version = 0.0.1
author = Eduardo
author_email = author@example.com

[options]
packages = find:
python_requires =>=3.5, <4
install_requires =
		 click
		 tabulate		 
include_package_data = True


[options.entry_points]
console_scripts =
    hledger-fifo = hledger-fifo.__main__:main